fix mobile wrong width for fb widget.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -222,7 +222,7 @@ a {
 
 .site-footer {
   padding-top: 2rem;
-  margin-top: 2rem;
+  /*margin-top: 2rem;*/
   border-top: solid 1px #eff0f1; }
 
 .site-footer-owner {
